--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="fa" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="/public/css/style.css" />
+    <link rel="icon" type="image/svg+xml" href="/images/Mina-Nazari.svg" />
+    <link rel="stylesheet" href="/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
